--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,9 +53,11 @@ jobs:
       - name: Run gofmt
         run: |
           gofmt
+
       - name: Run golangci-lint
         run: |
           golangci-lint run -v --timeout 5m
+
       - name: Execute test case
         run: >
           go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks
@@ -64,12 +66,10 @@ jobs:
       - name: Run benchmarks
         run: |
           go test ./... -bench=. -run=^#
-
       - name: Publish Coverage to Coveralls.io
         env:
           COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: goveralls -coverprofile=coverage.txt -service=github
-
       - uses: bissolli/gh-action-persist-workspace@v1
         with:
           action: persist
@@ -115,10 +115,10 @@ jobs:
       - name: Create AMD Artifact
         run: |
           # ... [commands to create AMD artifact]
-          npm i
-          npm run build-noargs
+          make setup
+          GOOS=linux GOARCH=amd64 go build -o ./build/bin/razor_go.linux-amd64 main.go
           cd build/bin
-          tar -czvf razor_go.linux-amd64.tar.gz razor
+          tar -czvf razor_go.linux-amd64.tar.gz razor_go.linux-amd64
           mv razor_go.linux-amd64.tar.gz ../../
 
       - name: Upload AMD Artifact
@@ -166,10 +166,10 @@ jobs:
       - name: Create ARM Artifact
         run: |
           # ... [commands to create ARM artifact]
-          npm i
-          npm run build-noargs
+          make setup
+          GOOS=linux GOARCH=arm64 go build -o ./build/bin/razor_go.linux-arm64 main.go
           cd build/bin
-          tar -czvf razor_go.linux-arm64.tar.gz razor
+          tar -czvf razor_go.linux-arm64.tar.gz razor_go.linux-arm64
           mv razor_go.linux-arm64.tar.gz ../../
 
       - name: Upload ARM Artifact
