--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -20,17 +20,33 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.21
+      - name: Cache npm modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      
+      - name: Cache Go dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      
       - name: Install Dependencies
         run: |
-          sudo add-apt-repository -y ppa:ethereum/ethereum
           sudo apt-get update
-          sudo apt-get install -y npm ethereum
-          npm install
-          go get -d github.com/ethereum/go-ethereum@v1.12.2
+          sudo apt-get install -y --no-install-recommends ethereum
+          npm ci
+          GO111MODULE=on go get -d github.com/ethereum/go-ethereum@v1.12.2
           go install github.com/ethereum/go-ethereum/cmd/abigen@v1.12.2
           go install github.com/mattn/goveralls@v0.0.11
           go install github.com/ory/go-acc@v0.2.7
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.2
+
       - name: Run make setup
         run: make setup
       - name: Run gofmt
@@ -41,16 +57,14 @@ jobs:
       #     golangci-lint run -v --timeout 5m
       - name: Execute test case
         run: |
-          go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks
-          --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks
-          --output coverage.txt
+          go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks --output coverage.txt
       - name: Run benchmarks
         run: |
           go test ./... -bench=. -run=^#
-      - name: Publish Coverage to Coveralls.io
-        env:
-          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: goveralls -coverprofile=coverage.txt -service=github
+      # - name: Publish Coverage to Coveralls.io
+      #   env:
+      #     COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: goveralls -coverprofile=coverage.txt -service=github
       - uses: bissolli/gh-action-persist-workspace@v1
         with:
           action: persist
