--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -53,19 +53,19 @@ jobs:
       - name: Run gofmt
         run: |
           gofmt
-      # - name: Run golangci-lint
-      #   run: |
-      #     golangci-lint run -v --timeout 5m
+      - name: Run golangci-lint
+        run: |
+          golangci-lint run -v --timeout 5m
       - name: Execute test case
         run: |
           go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks --output coverage.txt
       - name: Run benchmarks
         run: |
           go test ./... -bench=. -run=^#
-      # - name: Publish Coverage to Coveralls.io
-      #   env:
-      #     COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   run: goveralls -coverprofile=coverage.txt -service=github
+      - name: Publish Coverage to Coveralls.io
+        env:
+          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: goveralls -coverprofile=coverage.txt -service=github
       - uses: bissolli/gh-action-persist-workspace@v1
         with:
           action: persist
