--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,9 @@ jobs:
           node-version: "18"
 
       - name: Setup Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.21
+          go-version: '1.21'
 
       - name: Install Dependencies
         run: |
@@ -84,9 +84,9 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Setup Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.21
+          go-version: '1.21'
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -146,9 +146,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.21
+          go-version: '1.21'
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
