--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           node-version: "18"
       - name: Setup Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.21
+          go-version: '1.21'
       - name: Cache npm modules
         uses: actions/cache@v2
         with:
