--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
-name: CI/CD Develop Pipeline
+name: CI/CD Release Pipeline
 on:
   push:
     branches:
-      - "develop"
+      - "releases/*"
 
 jobs:
   test:
@@ -48,8 +48,8 @@ jobs:
           go install github.com/ory/go-acc@v0.2.7
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.2
 
-      - name: Run make setup for testnet
-        run: make setup-testnet
+      - name: Run make setup for mainnet
+        run: make setup
       - name: Run gofmt
         run: |
           gofmt
@@ -89,7 +89,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          file: ./Dockerfile.testnet
+          file: ./Dockerfile.mainnet
           context: .
           platforms: linux/amd64,linux/arm64/v8
           push: true
