--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - "develop"
+  pull_request:
+    branches:
+      - "feature/*"
 
 jobs:
   test:
@@ -71,6 +74,7 @@ jobs:
           action: persist
 
   push-docker-build:
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/heads/develop')
     runs-on: ubuntu-latest
     needs: test
     steps:
