--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -61,7 +61,7 @@ jobs:
           golangci-lint run -v --timeout 5m
       - name: Execute test case
         run: |
-          go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks --ignore razor/cmd/eventListeners.go --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks --output coverage.txt
+          go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks --output coverage.txt
       - name: Run benchmarks
         run: |
           go test ./... -bench=. -run=^#
