--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,22 +32,14 @@ jobs:
       - name: Install Dependencies
         run: >
           sudo add-apt-repository -y ppa:ethereum/ethereum
-
           sudo apt-get update
-
           sudo apt-get install -y npm ethereum
-
           npm install
+          go install github.com/ethereum/go-ethereum/cmd/abigen@v1.14.11
+          go install github.com/mattn/goveralls@v0.0.11
+          go install github.com/ory/go-acc@v0.2.7
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.61.0
 
-          go get -d github.com/ethereum/go-ethereum@1.14.11 \
-
-          && go install github.com/ethereum/go-ethereum/cmd/abigen@1.14.11 \
-
-          && go install github.com/mattn/goveralls@v0.0.11 \
-
-          && go install github.com/ory/go-acc@v0.2.7 \
-
-          && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.2
       - name: Run make setup for mainnet
         run: make setup
       - name: Run gofmt
@@ -95,22 +87,13 @@ jobs:
       - name: Install Dependencies
         run: >
           sudo add-apt-repository -y ppa:ethereum/ethereum
-
           sudo apt-get update
-
           sudo apt-get install -y npm ethereum
-
           npm install
-
-          go get -d github.com/ethereum/go-ethereum@v1.14.11 \
-
-          && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.14.11 \
-
-          && go install github.com/mattn/goveralls@v0.0.11 \
-
-          && go install github.com/ory/go-acc@v0.2.7 \
-
-          && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.2
+          go install github.com/ethereum/go-ethereum/cmd/abigen@v1.14.11
+          go install github.com/mattn/goveralls@v0.0.11
+          go install github.com/ory/go-acc@v0.2.7
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.61.0
 
       - name: Create AMD Artifact
         run: |
@@ -146,22 +129,13 @@ jobs:
       - name: Install Dependencies
         run: >
           sudo add-apt-repository -y ppa:ethereum/ethereum
-
           sudo apt-get update
-
           sudo apt-get install -y npm ethereum
-
           npm install
-
-          go get -d github.com/ethereum/go-ethereum@v1.14.11 \
-
-          && go install github.com/ethereum/go-ethereum/cmd/abigen@v1.14.11 \
-
-          && go install github.com/mattn/goveralls@v0.0.11 \
-
-          && go install github.com/ory/go-acc@v0.2.7 \
-
-          && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.54.2
+          go install github.com/ethereum/go-ethereum/cmd/abigen@v1.14.11
+          go install github.com/mattn/goveralls@v0.0.11
+          go install github.com/ory/go-acc@v0.2.7
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.61.0
 
       - name: Create ARM Artifact
         run: |
